package seedu.goldencompass.internship;

/**
 * Represents the possible states of an internship application.
 */
public enum ApplicationStatus {
    PENDING,
    OFFER,
    REJECTED
}
